[package]
name = "wgpu-thingi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
cfg-if = "1.0.0"
cgmath = "0.18.0"
instant = "0.1.12"
pollster = "0.3.0"
rand = "0.8.5"
tracing = "0.1.39"
tracing-subscriber = "0.3.17"
wgpu = "0.17.1"
winit = "0.28.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.17", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
